--- a/packages/datadog_tracking_http_client/pubspec.yaml
+++ b/packages/datadog_tracking_http_client/pubspec.yaml
@@ -3,6 +3,7 @@ description: A wrapping implementation of HttpClient for tracking resources with
 version: 1.4.0
 repository: https://github.com/DataDog/dd-sdk-flutter
 homepage: https://datadoghq.com
+publish_to: none
 
 
 environment:
@@ -12,7 +13,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  datadog_flutter_plugin: ^1.2.0
+  datadog_flutter_plugin: 
+    path: ../datadog_flutter_plugin
   uuid: ^3.0.5
   http: ^0.13.5
 
