--- a/packages/datadog_tracking_http_client/pubspec.yaml
+++ b/packages/datadog_tracking_http_client/pubspec.yaml
@@ -14,7 +14,10 @@ dependencies:
   flutter:
     sdk: flutter
   datadog_flutter_plugin: 
-    path: ../datadog_flutter_plugin
+    git:
+      url: https://github.com/4rthurmonteiro/dd-sdk-flutter.git
+      path: packages/datadog_flutter_plugin
+      ref: remove_ios
   uuid: ^3.0.5
   http: ^0.13.5
 
